--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Black+And+White+Picture&family=Finger+Paint&family=Madimi+One&family=Salsa&family=Simonetta:ital,wght@0,400;0,900;1,400;1,900&display=swap" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>CampusRishi</title>
   </head>
   <body>
     <div id="root"></div>
